k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelog-backend
  namespace: reelog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reelog-backend
  template:
    metadata:
      labels:
        app: reelog-backend
    spec:
      containers:
        - name: backend
          image: elenataleska/reelog-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
