k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reelog-frontend
  namespace: reelog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reelog-frontend
  template:
    metadata:
      labels:
        app: reelog-frontend
    spec:
      containers:
        - name: frontend
          image: elenataleska/reelog-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
