k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reelog-db
  namespace: reelog
spec:
  selector:
    app: reelog-db
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
